@@ -1,5 +1,11 @@
 2002-06-30  Conrad Scott  <conrad.scott@dsl.pipex.com>
 
+	* cygserver_client.cc (client_request::handle_request): Don't
+	bother with the client request activity marker when compiled with
+	debugging output.
+
+2002-06-30  Conrad Scott  <conrad.scott@dsl.pipex.com>
+
 	* cygserver_transport_pipes.cc
 	(MAX_WAIT_NAMED_PIPE_RETRY): New constant.
 	(WAIT_NAMED_PIPE_TIMEOUT): Ditto.
